# espanso

./: .editorconfig  .gitattributes  .gitignore  Cargo.toml  Compilation.md  cspell.config.yaml  taskfile.yaml
.cspell/: espanso-dictionary.txt
.github/workflows/: ci.yml  codeql.yml  dev-release.yml  prod-release.yml
.run/: Run.run.xml  Setup.run.xml  build.run.xml  run.run.xml  setup.run.xml  test.run.xml
espanso/: Cargo.toml
espanso-config/: Cargo.toml
espanso-detect/: Cargo.toml
espanso-detect/src/win32/: mod.rs
espanso-engine/: Cargo.toml
espanso-modulo/: Cargo.toml  build.rs
espanso-package/: Cargo.toml
espanso-path/: Cargo.toml
espanso-render/: Cargo.toml
espanso-ui/: Cargo.toml
espanso/src/: main.rs  util.rs
espanso/src/cli/daemon/: watcher.rs
espanso/src/cli/service/: stop.rs
images/src/: espanso-logos.ai
scripts/: build_windows_portable.rs  build_windows_resources.rs  create_bundle.sh
scripts/resources/windows/: espanso.cmd
