[package]
name = "espanso-modulo"
version = "0.1.0"
authors = ["Federico Terzi <federico-terzi@users.noreply.github.com>"]
edition = "2021"
build = "build.rs"

[dependencies]
serde.workspace = true
anyhow.workspace = true
thiserror.workspace = true
lazy_static.workspace = true
regex.workspace = true

[build-dependencies]
cc.workspace = true
regex.workspace = true
zip = "0.6.6"
winres = "0.1.12"
glob.workspace = true

[lints]
workspace = true
